infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: '*.${DOMAIN}'
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces: {from: Same}
    - name: apps-https
      hostname: '*.${DOMAIN}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs: [{kind: Secret, name: internal-wildcard-tls}]
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels: {elektro.internal/route-scope: applications}
    - name: admin-https
      hostname: '*.${ADMIN_DOMAIN}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs: [{kind: Secret, name: internal-wildcard-tls}]
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels: {elektro.internal/route-scope: administration}
    - name: management-https
      hostname: '*.${MANAGEMENT_DOMAIN}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs: [{kind: Secret, name: internal-wildcard-tls}]
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels: {elektro.internal/route-scope: management}
    - name: testing-https
      hostname: '*.${TESTING_DOMAIN}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs: [{kind: Secret, name: internal-wildcard-tls}]
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels: {elektro.internal/route-scope: applications}
    - name: staging-https
      hostname: '*.${STAGING_DOMAIN}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs: [{kind: Secret, name: internal-wildcard-tls}]
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels: {elektro.internal/route-scope: applications}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-https
  namespace: gateway-system
spec:
  parentRefs:
    - {name: internal, sectionName: http}
  hostnames: ['*.${DOMAIN}']
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect: {scheme: https, statusCode: 301}
